[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/GDEditor/Components/Attachments/FlowPort.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/GDEditor/Components/GDMessageGN.gd" type="Script" id=2]
[ext_resource path="res://addons/GDEditor/Components/Attachments/CharacterSelection.gd" type="Script" id=3]
[ext_resource path="res://addons/GDEditor/Components/Attachments/ExpressionSelection.gd" type="Script" id=5]

[sub_resource type="Theme" id=4]

[node name="Message" type="GraphNode"]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 38.0
margin_top = 162.0
margin_right = 302.0
margin_bottom = 310.0
mouse_filter = 1
theme = SubResource( 4 )
custom_constants/port_offset = 10
custom_constants/separation = 15
title = "Message[0]"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.13, 0.55, 0.13, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.13, 0.55, 0.13, 1 )
slot/1/left_enabled = false
slot/1/left_type = 1
slot/1/left_color = Color( 0.4, 0.8, 0.67, 1 )
slot/1/right_enabled = false
slot/1/right_type = 1
slot/1/right_color = Color( 0.4, 0.8, 0.67, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 0.13, 0.55, 0.13, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 0.13, 0.55, 0.13, 1 )
script = ExtResource( 2 )
__meta__ = {
"branch": 0,
"depth": 0
}

[node name="FlowPort" parent="." instance=ExtResource( 1 )]

[node name="Label" parent="FlowPort" index="1"]
margin_right = 70.0
text = "Message"

[node name="OutPort" parent="FlowPort" index="2"]
margin_left = 74.0

[node name="CharacterSection" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 53.0
margin_right = 248.0
margin_bottom = 103.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_left = 0

[node name="GridContainer" type="GridContainer" parent="CharacterSection"]
margin_right = 232.0
margin_bottom = 50.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="Title" type="Label" parent="CharacterSection/GridContainer"]
margin_top = 3.0
margin_right = 69.0
margin_bottom = 17.0
text = "Character"

[node name="CharacterSelection" type="OptionButton" parent="CharacterSection/GridContainer"]
margin_left = 79.0
margin_right = 232.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "None"
items = [ "None", null, false, 0, null ]
selected = 0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CharacterSection/GridContainer"]
margin_top = 33.0
margin_right = 69.0
margin_bottom = 47.0
text = "Expression"

[node name="ExpressionSelection" type="OptionButton" parent="CharacterSection/GridContainer"]
margin_left = 79.0
margin_top = 30.0
margin_right = 232.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "None"
items = [ "None", null, false, 0, null ]
selected = 0
script = ExtResource( 5 )

[node name="TextSection" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 118.0
margin_right = 248.0
margin_bottom = 138.0
mouse_filter = 2

[node name="Label" type="Label" parent="TextSection"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 17.0
text = "Text"

[node name="EditBtn" type="Button" parent="TextSection"]
margin_left = 196.0
margin_right = 232.0
margin_bottom = 20.0
size_flags_horizontal = 10
toggle_mode = true
text = "Edit"

[node name="MessageEdit" type="TextEdit" parent="TextSection/EditBtn"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = 23.0
margin_right = 140.5
margin_bottom = 185.0
rect_min_size = Vector2( 0, 80 )
draw_tabs = true
draw_spaces = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="CharacterSection/GridContainer/CharacterSelection" to="." method="_on_CharacterSelection_item_selected"]
[connection signal="pressed" from="CharacterSection/GridContainer/CharacterSelection" to="CharacterSection/GridContainer/CharacterSelection" method="_on_pressed"]
[connection signal="selected_character_deleted" from="CharacterSection/GridContainer/CharacterSelection" to="." method="_on_CharacterSelection_selected_character_deleted"]
[connection signal="item_selected" from="CharacterSection/GridContainer/ExpressionSelection" to="." method="_on_ExpressionSelection_item_selected"]
[connection signal="pressed" from="CharacterSection/GridContainer/ExpressionSelection" to="CharacterSection/GridContainer/ExpressionSelection" method="_on_pressed"]
[connection signal="toggled" from="TextSection/EditBtn" to="." method="_on_EditBtn_toggled"]
[connection signal="text_changed" from="TextSection/EditBtn/MessageEdit" to="." method="_on_MessageEdit_text_changed"]

[editable path="FlowPort"]
